# mobicare-LLMGuidance

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pylintrc  PANTS_COMMANDS.md  README.md  docker-compose.prod.tls.yml  docker-compose.prod.yml  docker-compose.yml  pants.toml  pyproject.toml
.github/workflows/: build-package.yml  lint.yml
deploy/: README.md  api.Dockerfile  inference.http.Dockerfile  inference.worker.Dockerfile
deploy/kubernetes/: README.md  api.yaml  bootstrap-jobs.yaml  configmap.yaml  inference.yaml  ingress.optional.yaml  kustomization.yaml  minio.yaml  namespace.yaml  ollama.yaml  qdrant.yaml  redis.yaml  secret.yaml  worker.yaml
deploy/nginx/: dev.conf  prod.conf  tls.conf
docs/architecture/: drug-dosing-pipeline.md
finetuning-experiments/: README.md  docker-compose.ollama.yml  requirements.txt
finetuning-experiments/adapters/: auth.py  gateway.py  guidance.py  guidance_payloads.py  ingestion.py  llm_judge.py  metrics.py  minio.py  qdrant.py
finetuning-experiments/artifacts/: __init__.py  compatibility.py  loader.py  migration.py  models.py  summaries.py  writer.py
finetuning-experiments/caching/: __init__.py  fingerprints.py  ingestion_registry.py  run_registry.py
finetuning-experiments/campaigns/: constraints.py  executor.py  generator.py  schema.py
finetuning-experiments/cli/: main.py  rendering.py
finetuning-experiments/configs/: loader.py  (+3 more)
scripts/: export_streamlit_baseline.py  k8s.ps1  k8s.sh  pull-ollama-models.ps1  pull-ollama-models.sh  start.ps1  start.sh
tests/: TESTING.md  conftest.py
(+409 files in other folders)
