[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobicare-llmguidance"
version = "0.1.0"
description = "LLM guidance services for API and inference workloads"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "minio>=7,<8",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "pypdf>=5,<6",
  "qdrant-client>=1.9,<2",
  "redis[hiredis]>=5,<6",
  "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "pylint==4.0.5",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "services/api/src",
  "services/inference/src",
  "services/shared/src",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = [
  "services/api/src",
  "services/inference/src",
  "services/shared/src",
]
asyncio_mode = "auto"
testpaths = ["services/inference/tests"]
